add MediaSorted and print binarytree

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/ListAdd_002.h=UTF-8
+encoding//src/Printer/Printer.h=UTF-8
 encoding//src/StringLen_003.h=UTF-8
